# okina-kotoba-web

./: .env_example  .gitignore  Cargo.toml  LICENSE  README.md  env_example.json
src/: lib.rs  main.rs
src/commands/: env_variables.rs  levelup.rs  metadata.rs  mod.rs
