[package]
name = "okina-bot_kotoba_web"
version = "0.1.0"
authors = ["uemi (Duram) <handurimu@gmail.com>"]
edition = "2018"


[dependencies]
regex = "1"
dotenv = "0.15.0"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.5.0", features = ["full"] }
serenity = "0.10"
